# ThesisWork

./: CMakeLists.txt  DataPrep.cpp  DataPrep.h  DenseLayer.cpp  DenseLayer.h  DropOutLayer.cpp  DropOutLayer.h  FatLayer.cpp  FatLayer.h  GBDropoutLayer.cpp  GBDropoutLayer.h  Layer.cpp  Layer.h  MixedLayer.cpp  MixedLayer.h  MultiLevelLayer.cpp  MultiLevelLayer.h  Thesis.sln  main.cpp
Thesis/: DropOutLayer.cpp  DropOutLayer.h  FatLayer.cpp  FatLayer.h  Layer.cpp  Thesis.vcxproj  Thesis.vcxproj.filters  main.cpp
Thesis/Debug/: Thesis.exe.recipe  Thesis.ilk  layer.obj.enc  main.obj.enc  vc142.idb
Thesis/Debug/Thesis.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Thesis.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
input/: housingData.csv
output/dropOutNode/: predictionOutput.csv  predictionOutput1.csv  predictionOutput2.csv  trainingLoss.csv  trainingLoss1.csv  trainingLoss2.csv
output/fatNode/: predictionOutput.csv  predictionOutput1.csv  predictionOutput2.csv  predictionOutput3.csv  predictionOutput4.csv  predictionOutput5.csv  trainingLoss.csv  trainingLoss1.csv  trainingLoss2.csv  trainingLoss3.csv  trainingLoss4.csv  trainingLoss5.csv
